# FormulasYpolinomios

./: .gitignore  FormulasYpolinomios.cabal  LICENSE  README.md  README.org  TAGS  docs  package.yaml  stack-docs
doc/: CLAI2009.tex  definiciones.tex  llncs.cls  palomar.txt
docs/: CLAI2009.html  DeltaDeduccion.html  FormulasYpolinomios.haddock  FormulasYpolinomios.txt  Logica.html  PolinomiosF2.html  Total.html  Transformaciones.html  doc-index.html  index.html  mini_CLAI2009.html  mini_DeltaDeduccion.html  mini_Logica.html  mini_PolinomiosF2.html  mini_Total.html  mini_Transformaciones.html
docs/src/: CLAI2009.html  DeltaDeduccion.html  Logica.html  Paths_FormulasYpolinomios.html  PolinomiosF2.html  Total.html  Transformaciones.html
src/: CLAI2009.hs  DeltaDeduccion.hs  Logica.hs  PolinomiosF2.hs  Transformaciones.hs
