name:                FormulasYpolinomios
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jaalonso/FormulasYpolinomios#readme
license:             BSD3
license-file:        LICENSE
author:              José A. Alonso
maintainer:          JoseA.Alonso@gmail.com
copyright:           2015
category:            test
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CLAI2009
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , doctest
  default-language:    Haskell2010

-- executable exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , FormulasYpolinomios
--   default-language:    Haskell2010

-- test-suite test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , FormulasYpolinomios
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jaalonso/FormulasYpolinomios
